# crud_routers

./: .gitignore  Cargo.toml  LICENSE  README.md
axum_crudrouter/: Cargo.toml
axum_crudrouter/src/: diesel.rs  lib.rs  sea_orm.rs
axum_crudrouter/src/repositories/: diesel.rs  mod.rs
axum_crudrouter/src/servers/: actix.rs  axum.rs  mod.rs
crud_routers/: Cargo.toml
crud_routers/src/repositories/: mod.rs  sea_orm.rs
crud_routers/src/servers/: actix.rs  axum.rs  mod.rs
crud_routers/tests/: openapi.rs  test_api_spec.json  test_api_spec_without_create_schema.json
examples/diesel_axum/: Cargo.toml
examples/diesel_axum/src/: lib.rs  main.rs  models.rs
examples/diesel_postgres/: Cargo.toml
examples/diesel_postgres/src/: main.rs  models.rs
examples/seaorm_actix/: Cargo.toml
examples/seaorm_actix/src/: lib.rs  main.rs
examples/seaorm_postgres/: Cargo.toml
examples/seaorm_postgres/src/: main.rs  post.rs
rust_crudrouter/: Cargo.toml
rust_crudrouter/src/: lib.rs  openapi.rs
rust_crudrouter/src/repositories/: diesel.rs  mod.rs  sea_orm.rs
rust_crudrouter/src/servers/: actix.rs  axum.rs  mod.rs
rust_crudrouter/tests/: openapi.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
