[package]
name = "axum_crudrouter"
version = "0.1.0"
edition = "2021"

[dependencies]
# databases
sea-orm = { version = "1.0.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

axum = { version = "0.7.5"}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
