[package]
name = "crud_routers"
description = "Automatically create crud routes for your favorite api server and orm"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["crud", "api", "server", "openapi", "web"]
repository = "https://github.com/furkan-guvenc/crud_routers"

[dependencies]
# databases
diesel = { version = "2" , optional = true}
sea-orm = { version = "1.0.0", optional = true }

axum = { version = "0.7.5", optional = true}
actix-web = {version = "4", optional = true}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.1.1" , optional = true}

[features]
axum = ["dep:axum"]
actix = ["dep:actix-web"]
diesel = ["dep:diesel"]
sea-orm = ["dep:sea-orm"]
openapi = ["dep:utoipa"]
