[package]
name = "diesel_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_crudrouter = { path = "../../rust_crudrouter" }

diesel = { version = "2", features = ["postgres"] }
axum = { version = "0.7.5", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"

[dev-dependencies]
test_utils = { path = "../../test_utils" }
