[package]
name = "diesel_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_crudrouter = { path = "../../rust_crudrouter", features = ["axum", "diesel", "openapi"] }

diesel = { version = "2", features = ["postgres"] }
axum = { version = "0.7.5", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
utoipa = "5.1.1"
utoipa-swagger-ui = {version = "8.0.2", features = ["axum"]}

[dev-dependencies]
test_utils = { path = "../../test_utils" }
