[package]
name = "diesel_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
crud_routers = { path = "../../crud_routers", features = ["axum", "diesel", "openapi"] }

diesel = { version = "2", features = ["postgres"] }
axum = { version = "0.8", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
utoipa = "5"
utoipa-swagger-ui = {version = "9", features = ["axum"]}

[dev-dependencies]
test_utils = { path = "../../test_utils" }
