[package]
name = "seaorm_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_crudrouter = { path = "../../rust_crudrouter" }

sea-orm = { version = "1.0.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
mime = "0.3.17"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
reqwest = "0.12.7"
