[package]
name = "seaorm_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_crudrouter = { path = "../../rust_crudrouter" }

sea-orm = { version = "1.0.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"

[dev-dependencies]
test_utils = { path = "../../test_utils" }
