[package]
name = "seaorm_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum_crudrouter = { path = "../../axum_crudrouter" }

sea-orm = { version = "1.0.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
axum = { version = "0.7.5", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
mime = "0.3.17"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
